JEAP-6672: refactoring of the housekeeping: delete messages in batches using paging